--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.6.2
 enum34==1.1.6
 ipython==5.3.0
 ipython-genutils==0.2.0
+Markdown==2.6.8
 packaging==16.8
 pathlib2==2.2.1
 pexpect==4.2.1
